--- a/playground/event-emit.html
+++ b/playground/event-emit.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- emit은 하위 컴포넌트에서 상위 컴포넌트로 발생한 이벤트를 전달하고 상위 컴포넌트의 메서드를 실행시킨다 -->
     <div id="app">
         <p>{{ num }}</p>
         <!-- <app-header v-on:하위 컴포넌트에서 발생한 이벤트 이름 ="상위 컴포넌트 메서드 이름"></app-header> -->
